Version 0.7.2     unreleased

	* Add Sphinx configuration path to .readthedocs.yml.
	* Adjust GHA build process to allow builds for stacked PRs.
	* Add a new `run clean` target to clean up generated data.
	* Move unit tests from `tests` into `src/tests/smartapp`.
	* Update the MyPy configuration so we're using latest rules.
	* Update the jinja2 transitive dependency to address CVE-2025-27516.
	* Update the requests transitive dependency to address CVE-2024-47081.
	* Update the urllib3 transitive dependency to address CVE-2025-50181.

Version 0.7.1     14 Jan 2025

	* Pull in latest version of run-script-framework.
	* Upgrade to poetry-dynamic-versioning v1.5.2 for minor fixes.
	* Add .python-version in preferred order to support pyenv.
	* Adjust pyproject.toml comments to fix pip build at readthedocs.
	* Add notes in documentation that I no longer use SmartThings.
	* Add Sphinx configuration path to .readthedocs.yml.

Version 0.7.0     08 Jan 2025

	* Migrate to Poetry v2 and project-managed Poetry plugins.
	* Move configuration into pyproject.toml for pytest, mypy & coverage.
	* Upgrade to gha-shared-workflows@v8 for Poetry v2 support.
	* Migrate from pendulum to arrow for dates (interface change).
	* Fix bug in serializing BooleanSetting to and from YAML.
	* Update all dependencies and outdated constraints.

Version 0.6.9     02 Jan 2025

	* Add GitHub security policy in SECURITY.md.
	* Pull in latest version of run-script-framework.
	* Update dependencies to address Dependabot warnings.
	* Upgrade to gha-shared-workflows@v7 with publish improvements.
	* Add a default .pytest.ini file based on new cookiecutter template.
	* Change the default branch in GitHub from master to main.

Version 0.6.8     15 Oct 2024

	* Pull in latest updates from run-script-framework.
	* Simplify GHA integration with coveralls.io.
	* Update transitive dependencies to address Dependabot warnings.
	* Add support for Python v3.13 and drop support for v3.9.